# websocket-reader

./: .gitignore  Cargo.toml  README.md  package.json
src/: main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
ui/: index.html  main.js  styles.css
