[package]
name = "ws-reader"
version = "0.1.0"
edition = "2024"
default-run = "ws-reader"

[lib]
name = "ws_reader_lib"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["sync"] }
tokio-tungstenite = { version = "0.26", features = ["native-tls"] }
tungstenite = { version = "0.26", features = ["native-tls"] }
futures-util = "0.3"

[[bin]]
name = "ws-reader"
path = "src/main.rs"

[[bin]]
name = "server"
path = "bin/server.rs"
